fixed site not displaying on mobile

--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 		margin-left:10%;
 	}
 	#social-media{
-		display: none;
+display: none;
+
 	}
 
 	#nav .logo{
@@ -451,6 +452,26 @@ NAVBAR CODE
 #nav.sticky::after {
 	height: 100%;
 }
+
+.li {
+	background-image:
+	  linear-gradient(
+	  to bottom,
+	  transparent 0%,
+	  transparent 90%,
+	  #000000 90%,
+	  #000000 100%);
+	background-repeat: no-repeat;
+	background-size: 0% 100%;
+	background-position-x: right;
+	transition: background-size 350ms;
+	padding-bottom: 5px;
+  }
+  .li:hover {
+	background-size: 100% 100%;
+	background-position-x: left;
+	opacity: 1;
+  }
 
 #nav .logo {
     
